{
    "name": "PlayerInputActionAsset",
    "maps": [
        {
            "name": "Player",
            "id": "441a10f5-5766-4b09-8ecb-9706ab6ace59",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "78ad5668-4354-4ea2-adf9-7fa28ac229b9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseAim",
                    "type": "Value",
                    "id": "949e6191-d99b-4766-a955-5bccea7f8757",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "4b0f73bf-8d89-4b3d-b871-322f4aa9dffc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Defend",
                    "type": "Button",
                    "id": "e50a0bcb-e37f-456f-a3f2-31b4cb2ebada",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShowPoint",
                    "type": "PassThrough",
                    "id": "85a7bdf7-9002-4d31-afd3-0ded6510ba1d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "8f94891b-3104-4158-a664-23c36367781f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4df9a71f-f2ae-4a50-a3c1-29695826612a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cbf47773-a61c-42bf-ae9b-2b17df7e270d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "15950a6c-63a6-4676-a5cd-bd241790f9d0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c9964f50-7dd3-48bc-b641-d7b21cd443fb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "20b0b4a3-2b1d-403e-b306-2d4a12a4ea1f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56a99094-7f28-479f-b10e-ffec854e8552",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8836a3be-7dd0-4576-a436-348edf72aa73",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Defend",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4f5617f-6daa-477c-b1b8-c620f2568d70",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowPoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}